Ignore Debug and Release folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Ignore folder with SMFL libraries and .vs folder
 .vs
 Bibliosy
+# Debug and Release folder
+Debug
+Release
+x64
 # Prerequisites
 *.d
 
